Added feature to add the title

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <div class="container">
                 <h2 class="display-5 " style="text-align: center;">Welcome to Magic Notes</h2>
                 <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Add a Title</label>
+                    <input type="text" class="form-control" id="addTitle">
+  
                     <label for="exampleFormControlTextarea1">Add a Note</label>
                     <textarea class="form-control" id="addText" rows="2"></textarea>
                 </div>
